--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -25,7 +25,8 @@ html
         header.gnb
             .logo 
                 span FROG 
-                div.sub-logo Flexible Robots always Observe Goodman.
+                //- div.sub-logo Fix, Refactor, Optimize, Grow!!
+                div.sub-logo Frontend Renders On Grid...
             nav.main-menu
                 .toggle-menu
                     .ga-button.icon.circle.show-menu
