--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -251,13 +251,10 @@ section .section-contents .contents-wrapper .contents-item {
 
 #list .ga-list {
   max-width: 250px;
-  border: 1px solid #ebebeb;
+  border: 1px solid var(--brd);
 }
 #list .ga-list .item {
   padding: 10px;
-}
-#list .ga-list .item:hover {
-  background-color: #f2f2f2;
 }
 
 #selectbox .select-menu .option-item {
