--- a/site/views/components/base.pug
+++ b/site/views/components/base.pug
@@ -18,7 +18,7 @@ block contents
                             | Pretendard Variable(CDN)
                         .contents-wrapper.pretendard
                             .ga-grid
-                                .column.span-2.span-xs-12.span-sm-12.span-md-12.mainWord Aa
+                                .column.span-2.span-xs-12.span-sm-12.span-md-12.mainWord AaBb
                                 .column.span-8.span-xs-12.span-sm-12.span-md-12.mainWord 가나다
                                 .column.span-10.span-xs-12.span-sm-12.span-md-12.subWord
                                     p ABCDEFGHIJKLMNOPQRSTUVWXYZ
@@ -30,59 +30,64 @@ block contents
                     .contents
                         h4.contents-title Weight
                         .contents-wrapper
-                            .ga-grid.grid-table
-                                .rows.grid-header
-                                    .column.span-3 Name
-                                    .column.span-2 Value
-                                    .column.span-6 Usage
-                                .rows
-                                    .column.span-3 Light
-                                    .column.span-2 300
-                                    .column.span-6.light Gabia UI System
-                                .rows
-                                    .column.span-3 Regular
-                                    .column.span-2 400
-                                    .column.span-6 Gabia UI System
-                                .rows
-                                    .column.span-3 Bold
-                                    .column.span-2 600
-                                    .column.span-6.bold Gabia UI System
+                            table.ga-table
+                                thead
+                                    tr 
+                                        th Name 
+                                        th Value
+                                        th Usage
+                                tbody
+                                    tr 
+                                        td Light 
+                                        td 300 
+                                        td Frog Ui System 
+                                    tr 
+                                        td Regular 
+                                        td 400 
+                                        td Frog Ui System 
+                                    tr 
+                                        td Bold 
+                                        td 600 
+                                        td Frog Ui System 
+
             .section-contents
                 .ga-card
                     .contetns
                         h4.contents-title Spacing
                         .contents-wrapper
-                            .ga-grid.grid-table
-                                .rows.grid-header
-                                    .column.span-2 Name
-                                    .column.span-2 Value
-                                    .column.span-3 Class
-                                    .column.span-5 Usage
-                                .rows
-                                    .column.span-2 Wider
-                                    .column.span-2 1
-                                    .column.span-3 spacing-wider
-                                    .column.span-5.spacing-wider Gabia UI System
-                                .rows
-                                    .column.span-2 Wide
-                                    .column.span-2 0.5
-                                    .column.span-3 spacing-wide
-                                    .column.span-5.spacing-wide Gabia UI System
-                                .rows
-                                    .column.span-2 Normal
-                                    .column.span-2 0
-                                    .column.span-3
-                                    .column.span-5 Gabia UI System
-                                .rows
-                                    .column.span-2 Narrow
-                                    .column.span-2 -0.5
-                                    .column.span-3 spacing-narrow
-                                    .column.span-5.spacing-narrow Gabia UI System
-                                .rows
-                                    .column.span-2 Narrower
-                                    .column.span-2 -1
-                                    .column.span-3 spacing-narrower
-                                    .column.span-5.spacing-narrower Gabia UI System
+                            table.ga-table
+                                thead
+                                    tr 
+                                        th Name 
+                                        th Value
+                                        th Class
+                                        th Usage
+                                tbody
+                                    tr 
+                                        td Wider 
+                                        td 1 
+                                        td spacing-wider 
+                                        td Frog Ui System 
+                                    tr 
+                                        td Wide 
+                                        td 0.5 
+                                        td spacing-wide 
+                                        td Frog Ui System 
+                                    tr 
+                                        td Normal 
+                                        td 0 
+                                        td  
+                                        td Frog Ui System 
+                                    tr 
+                                        td Narrow 
+                                        td -0.5 
+                                        td spacing-narrow 
+                                        td Frog Ui System 
+                                    tr 
+                                        td Narrower 
+                                        td -1 
+                                        td spacing-narrower 
+                                        td Frog Ui System 
             .section-contents
                 .ga-card
                     .contents
