--- a/src/definitions/components/list.scss
+++ b/src/definitions/components/list.scss
@@ -4,6 +4,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    color: var(--txt);
     .item-title {
       flex: 0 1 auto;
     }
@@ -44,7 +45,7 @@
   }
   &.bordered {
     > .item {
-      border-bottom: 1px solid $borderColor;
+      border-bottom: 1px solid var(--brd);
       &:last-child {
         border: 0
       }
@@ -58,7 +59,7 @@
       }
       &.selected, &.active {
         position: relative;
-        background-color: #F8F8F8;
+        background-color: var(--suf);
         &:after {
           content: '';
           position: absolute;
@@ -74,160 +75,163 @@
     }
   }
   //old style
-  .ga-item {
-    position: relative;
-    padding: 10px;
-    background-color: #fff;
-    margin-bottom: 1px;
-    &:last-child {
-      margin: 0;
-    }
-    .sub-title  {
-      display: block;
-      font-size: 13px;
-      color: #909090;
-      padding: 0;
-    }
-    .btn-set {
-      position: absolute;
-      top: 50%;
-      right:0;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      padding: 0 5px;
-      transform: translateY(-50%);
-      .ga-button {
-        color: #909090;
+  &.retro {
+
+    .item {
+      position: relative;
+      padding: 10px;
+      background-color: #fff;
+      margin-bottom: 1px;
+      &:last-child {
         margin: 0;
       }
-    }
-    &:hover > div {
-      /*pointer-events: none;*/
-    }
-  }
-  &.selection {
-    .ga-item {
-      cursor: pointer;
-      &:hover {
-        background-color: #EFF4FC;
+      .sub-title  {
+        display: block;
+        font-size: 13px;
+        color: #909090;
+        padding: 0;
       }
-      &.selected {
-        position: relative;
-        background-color: #F8F8F8;
-        span.check-icon {
-          position: absolute;
-          top:0;
-          right: 0;
-          padding: 10px;
-          color: #2985DB;
+      .btn-set {
+        position: absolute;
+        top: 50%;
+        right:0;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        padding: 0 5px;
+        transform: translateY(-50%);
+        .ga-button {
+          color: #909090;
+          margin: 0;
+        }
+      }
+      &:hover > div {
+        /*pointer-events: none;*/
+      }
+    }
+    &.selection {
+      .item {
+        cursor: pointer;
+        &:hover {
+          background-color: #EFF4FC;
+        }
+        &.selected {
+          position: relative;
+          background-color: #F8F8F8;
+          span.check-icon {
+            position: absolute;
+            top:0;
+            right: 0;
+            padding: 10px;
+            color: #2985DB;
+          }
         }
       }
     }
-  }
-  &.extend {
-    > .ga-item {
-      cursor: pointer;
-      padding:0;
-      margin:0;
+    &.extend {
+      > .item {
+        cursor: pointer;
+        padding:0;
+        margin:0;
+      }
     }
-  }
-  &.underLine {
-    .ga-item {
-      border-bottom: 1px solid #EBEBEB;
+    &.underLine {
+      .item {
+        border-bottom: 1px solid #EBEBEB;
+      }
+      &:first-child {
+        border-top: 1px solid #EBEBEB;
+      }
     }
-    &:first-child {
-      border-top: 1px solid #EBEBEB;
+    &.compact {
+      .item {
+        padding: 4px 10px;
+      }
     }
-  }
-  &.compact {
-    .hw-item {
-      padding: 4px 10px;
+    //&.draggable {
+    //  .ga-item {
+    //    position: relative;
+    //    padding-left: 30px;
+    //    &:before {
+    //      content: "\e92d";
+    //      font-family: 'gi-icons';
+    //      position: absolute;
+    //      top:0;
+    //      left: 0;
+    //      padding: 10px;
+    //    }
+    //  }
+    //}
+    &.timeline {
+      .item {
+        position: relative;
+        margin-left: 16px;
+        margin-bottom: 0;
+        &:after {
+          content: "";
+          position: absolute;
+          width: 12px;
+          height: 12px;
+          top:50%;
+          left: -10px;
+          transform: translate(-50%, -50%);
+          border-radius: 50%;
+          background-color: #d4d4d4;
+        }
+        &.selected:after {
+          background-color: #2985DB;
+        }
+      }
+      &.connect .ga-item {
+        &:before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: -10px;
+          border-left: 1px solid #d4d4d4;
+          height: 100%;
+        }
+        &:first-child{
+          &:before {top: 50%}
+        }
+        &:last-child{
+          &:before {top: auto; bottom:50%; height: calc(100% - 5px);}
+        }
+      }
     }
-  }
-  //&.draggable {
-  //  .ga-item {
-  //    position: relative;
-  //    padding-left: 30px;
-  //    &:before {
-  //      content: "\e92d";
-  //      font-family: 'gi-icons';
-  //      position: absolute;
-  //      top:0;
-  //      left: 0;
-  //      padding: 10px;
-  //    }
-  //  }
-  //}
-  &.timeline {
-    .ga-item {
-      position: relative;
-      margin-left: 16px;
-      margin-bottom: 0;
-      &:after {
-        content: "";
+    &.icon .item{
+      .item-title {
+        /*display: inline;*/
+        position: relative;
+        padding-left: 26px;
+      }
+      .list-icon {
         position: absolute;
-        width: 12px;
-        height: 12px;
-        top:50%;
-        left: -10px;
-        transform: translate(-50%, -50%);
-        border-radius: 50%;
-        background-color: #d4d4d4;
-      }
-      &.selected:after {
-        background-color: #2985DB;
+        top:0;
+        left: 0;
+        padding: 2px 10px 2px 0;
+        font-size: 16px;
+        display: inline-block;
+        line-height: 1em;
+        color: #909090;
       }
     }
-    &.connect .ga-item {
-      &:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: -10px;
-        border-left: 1px solid #d4d4d4;
-        height: 100%;
-      }
-      &:first-child{
-        &:before {top: 50%}
-      }
-      &:last-child{
-        &:before {top: auto; bottom:50%; height: calc(100% - 5px);}
-      }
-    }
-  }
-  &.icon .ga-item{
-    .item-title {
-      /*display: inline;*/
-      position: relative;
-      padding-left: 26px;
-    }
-    .list-icon {
-      position: absolute;
-      top:0;
-      left: 0;
-      padding: 2px 10px 2px 0;
-      font-size: 16px;
-      display: inline-block;
-      line-height: 1em;
-      color: #909090;
-    }
-  }
-  &.ul {
-    > .item {
-      margin-left: 1.25rem;
-      &:after {
-        user-select: none;
-        pointer-events: none;
-        position: absolute;
-        top: auto;
-        left: auto;
-        font-weight: 400;
-        margin-left: -1.25rem;
-        content: '•';
-        opacity: 1;
-        color: inherit;
-        vertical-align: top;
+    &.ul {
+      > .item {
+        margin-left: 1.25rem;
+        &:after {
+          user-select: none;
+          pointer-events: none;
+          position: absolute;
+          top: auto;
+          left: auto;
+          font-weight: 400;
+          margin-left: -1.25rem;
+          content: '•';
+          opacity: 1;
+          color: inherit;
+          vertical-align: top;
+        }
       }
     }
   }
