--- a/src/themes/default/components/table.scss
+++ b/src/themes/default/components/table.scss
@@ -2,7 +2,7 @@ $verticalMargin: 1em;
 $horizontalMargin: 0;
 $margin: $verticalMargin $horizontalMargin;
 $borderWidth: 1px;
-$tableBorderColor: #d7dae2;
+$tableBorderColor: var(--brd);
 $border: $borderWidth solid $tableBorderColor;
 
 $borderCollapse: separate;
@@ -21,4 +21,4 @@ $cellHorizontalPadding: relativePx(8);
 $cellPadding: $cellVerticalPadding $cellHorizontalPadding;
 $cellTextAlign: inherit;
 
-$headerBackgroundColor: #e5e9f2;
+$headerBackgroundColor: #ebebeb;
