--- a/site/views/components/base.pug
+++ b/site/views/components/base.pug
@@ -18,9 +18,9 @@ block contents
                             | Pretendard Variable(CDN)
                         .contents-wrapper.pretendard
                             .ga-grid
-                                .column.span-2.span-xs-12.span-sm-12.span-md-12.mainWord AaBb
-                                .column.span-8.span-xs-12.span-sm-12.span-md-12.mainWord 가나다
-                                .column.span-10.span-xs-12.span-sm-12.span-md-12.subWord
+                                .column.span-3.span-xs-12.mainWord AaBb
+                                .column.span-9.span-xs-12.mainWord 가나다
+                                .column.span-10.span-xs-12.subWord
                                     p ABCDEFGHIJKLMNOPQRSTUVWXYZ
                                     p abcdefghijklmnopqrstuvwxyz
                                     p 1234567890 ,./(){}[]\|:;"'?
@@ -40,15 +40,15 @@ block contents
                                     tr 
                                         td Light 
                                         td 300 
-                                        td Frog Ui System 
+                                        td Frontend Renders On Grid. 
                                     tr 
                                         td Regular 
                                         td 400 
-                                        td Frog Ui System 
+                                        td Frontend Renders On Grid. 
                                     tr 
                                         td Bold 
                                         td 600 
-                                        td Frog Ui System 
+                                        td Frontend Renders On Grid. 
 
             .section-contents
                 .ga-card
@@ -67,37 +67,37 @@ block contents
                                         td Wider 
                                         td 1 
                                         td spacing-wider 
-                                        td Frog Ui System 
+                                        td Frontend Renders On Grid. 
                                     tr 
                                         td Wide 
                                         td 0.5 
                                         td spacing-wide 
-                                        td Frog Ui System 
+                                        td Frontend Renders On Grid. 
                                     tr 
                                         td Normal 
                                         td 0 
                                         td  
-                                        td Frog Ui System 
+                                        td Frontend Renders On Grid. 
                                     tr 
                                         td Narrow 
                                         td -0.5 
                                         td spacing-narrow 
-                                        td Frog Ui System 
+                                        td Frontend Renders On Grid. 
                                     tr 
                                         td Narrower 
                                         td -1 
                                         td spacing-narrower 
-                                        td Frog Ui System 
+                                        td Frontend Renders On Grid. 
             .section-contents
                 .ga-card
                     .contents
                         h4.header.contents-title Heading
                         .contents-wrapper
-                            h1.header [H1] Gabia UI System (28px)
-                            h2.header [H2] Gabia UI System (24px)
-                            h3.header [H3] Gabia UI System (18px)
-                            h4.header [H4] Gabia UI System (16px)
-                            h5.header [H5] Gabia UI System (14px)
+                            h1.header [H1] Frontend Renders On Grid. (28px)
+                            h2.header [H2] Frontend Renders On Grid. (24px)
+                            h3.header [H3] Frontend Renders On Grid. (18px)
+                            h4.header [H4] Frontend Renders On Grid. (16px)
+                            h5.header [H5] Frontend Renders On Grid. (14px)
             .section-contents
                 .ga-card
                     .contents
@@ -110,11 +110,11 @@ block contents
                             .ga-button.huge Huge
                             .ga-button.massive Massive
                         .contents-wrapper
-                            .contents-item.tiny [Tiny] Gabia UI System (10px)
-                            .contents-item.small [Small] Gabia UI System (12px)
-                            .contents-item.medium [Medium] Gabia UI System (14px)
-                            .contents-item.large [Large] Gabia UI System (18px)
-                            .contents-item.huge [Huge] Gabia UI System (20px)
-                            .contents-item.massive [Massive] Gabia UI System (22px)
+                            .contents-item.tiny [Tiny] Frontend Renders On Grid. (10px)
+                            .contents-item.small [Small] Frontend Renders On Grid. (12px)
+                            .contents-item.medium [Medium] Frontend Renders On Grid. (14px)
+                            .contents-item.large [Large] Frontend Renders On Grid. (18px)
+                            .contents-item.huge [Huge] Frontend Renders On Grid. (20px)
+                            .contents-item.massive [Massive] Frontend Renders On Grid. (22px)
     block module 
         script(src="/js/base.js")
