--- a/site/views/components/button.pug
+++ b/site/views/components/button.pug
@@ -109,12 +109,12 @@ block contents
                             .ga-button.equal.primary 저장
                             .ga-button.equal.secondary 취소
                             .ga-button.equal.outline 보기
-                            .ga-button.equal 가바아 UI 시스템
+                            .ga-button.equal Frog UI System
                         .contents-item
                             .ga-button.equal.large.primary 저장
                             .ga-button.equal.large.secondary 취소
                             .ga-button.equal.large.outline 보기
-                            .ga-button.equal.large 가바아 UI 시스템
+                            .ga-button.equal.large FROG UI System
                     .footer
                         - var code = '<button class="ga-button equal">Equal</button>';
                         - var code1 = '<button class="ga-button equal large" disabled>Equal L</button>';
