--- a/src/themes/default/components/panel.scss
+++ b/src/themes/default/components/panel.scss
@@ -2,9 +2,9 @@ $verticalMargin: 1em;
 $horizontalMargin: 0;
 $margin: $verticalMargin $horizontalMargin;
 
-$panelBackgroundColor: #e5e9f2;
-$panelBorderColor: #d7dae2;
-$panelFontColor: #2c3e50;
+$panelBackgroundColor: var(--suf);
+$panelBorderColor: var(--brd);
+$panelFontColor: var(--txt);
 
 $panelBorder: 1px solid $panelBorderColor;
 $panelVerticalPadding: relativePx(8);
