--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -10,21 +10,25 @@ header.gnb {
   padding: 10px;
   display: flex;
   justify-content: space-between;
+  background-color: var(--bgc);
   z-index: 999;
 }
 header.gnb .logo {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 0;
+  transform: translate(0, -50%);
+  padding: 0 10px;
+}
+header.gnb .toggle-menu {
+  display: none;
 }
 
-header.gnb .logo {
-  text-align: center;
-}
 header.gnb .logo span {
+  display: inline-block;
   font-size: 2em;
   font-weight: bold;
+  margin-bottom: 5px;
 }
 header.gnb .logo .sub-logo {
   font-size: 0.8em;
@@ -49,7 +53,7 @@ header.gnb .logo .sub-logo {
 
 .main-container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   margin: 0 auto;
   position: relative;
@@ -58,44 +62,26 @@ header.gnb .logo .sub-logo {
   padding-top: 60px;
 }
 .main-container.main .right-part {
-  height: calc(100vh - 60px);
+  height: 100%;
 }
 .main-container .left-part {
-  width: 250px;
+  max-width: 250px;
   height: 100vh;
-  overflow-y: auto;
-  border-right: 1px solid var(--brd);
+  flex-shrink: 0;
 }
 .main-container .right-part {
   flex-grow: 1;
   max-width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
 }
 
 .side-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 9999;
-}
-.side-menu .background {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: var(--txt);
-  opacity: 0;
-}
-.side-menu.open .background {
-  display: block;
-  opacity: 0.4;
-}
-.side-menu.open .menu-wrapper {
-  transform: translateX(0);
+  width: 250px;
+  overflow-y: auto;
+  flex-shrink: 0;
+  position: relative;
+  background-color: var(--bgc);
 }
 
 .menu-wrapper {
@@ -110,23 +96,25 @@ header.gnb .logo .sub-logo {
 }
 
 .ui-list {
+  width: 100%;
   height: 100%;
-  background-color: var(--bgc);
-}
-.ui-list > div {
-  border-bottom: 1px solid var(--brd);
 }
 .ui-list .menu-header {
   padding: 10px;
   font-size: 1.2em;
 }
+.ui-list .menu-contents {
+  padding: 10px;
+}
+.ui-list .nav-item {
+  border-radius: 4px;
+}
 .ui-list .nav-item a {
   width: 100%;
   padding: 10px;
 }
-.ui-list .nav-item a:hover {
-  background-color: #6d9d72;
-  color: #fff;
+.ui-list .nav-item a::first-letter {
+  text-transform: uppercase;
 }
 
 .flex-wrap {
@@ -143,6 +131,13 @@ section {
 section .section-title {
   padding-bottom: 50px;
   border-bottom: 1px solid #efefef;
+}
+section .section-title h1 {
+  font-size: 3em;
+  margin-bottom: 14px;
+}
+section .section-title .section-desc {
+  color: #d6d6d6;
 }
 section .section-contents {
   padding: 30px 0;
@@ -186,7 +181,7 @@ section .section-contents .contents-wrapper .contents-item {
 }
 
 #typography .mainWord {
-  font-size: 6em;
+  font-size: 4em;
 }
 #typography .subWord {
   color: #ababab;
@@ -313,11 +308,23 @@ section pre {
 /* Extra Small Mobile */
 /* Small Mobile */
 @media (min-width: 360px) and (max-width: 599px) {
-  .gnb .main-menu .toggle-menu {
+  header.gnb .logo {
+    text-align: center;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  header.gnb .main-menu .toggle-menu {
     display: block;
   }
-  .main-container .left-part {
-    display: none;
+  .main-container .left-part .side-menu {
+    position: absolute;
+    width: 100%;
+    z-index: 9999;
+    transition: margin 250ms ease;
+    margin-left: -100%;
+  }
+  .main-container.open .left-part .side-menu {
+    margin-left: 0;
   }
   #typography .color-box {
     min-width: 90px;
