--- a/site/public/scss/style.scss
+++ b/site/public/scss/style.scss
@@ -10,20 +10,26 @@ header.gnb {
   padding: 10px;
   display: flex;
   justify-content: space-between;
+  background-color: var(--bgc);
   z-index: 999;
   .logo {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 0;
+    transform: translate(0, -50%);
+    padding: 0 10px;
+  }
+  .toggle-menu {
+    display: none;
   }
 }
 
 header.gnb .logo {
-  text-align: center;
   span {
+    display: inline-block;
     font-size: 2em;
     font-weight: bold;
+    margin-bottom: 5px;
   }
   .sub-logo {
     font-size: .8em;
@@ -45,57 +51,34 @@ header.gnb .logo {
 }
 .main-container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   margin: 0 auto;
   position: relative;
   &.main {
     padding-top: $gnbHeight;
     .right-part {
-      height: calc(100vh - $gnbHeight)
+      height: 100%
     }
   }
   .left-part {
-    width: 250px;
+    max-width: 250px;
     height: 100vh;
-    overflow-y: auto;
-    border-right: 1px solid var(--brd);
-    // border-top-right-radius: 25px;
-    // background-color: #fff;
-    
+    flex-shrink: 0;
   }
   .right-part {
     flex-grow: 1;
     max-width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow-y: auto;
   }
 }
 .side-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 9999;
-  .background {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--txt);
-    opacity: 0;
-  }
-  &.open {
-    .background {
-      display: block;
-      opacity: .4;
-    }
-    .menu-wrapper {
-      transform: translateX(0);
-    }
-  }
+  width: 250px;
+  overflow-y: auto;
+  flex-shrink: 0;
+  position: relative;
+  background-color: var(--bgc);
 }
 .menu-wrapper {
   position: absolute;
@@ -108,22 +91,23 @@ header.gnb .logo {
   overflow-y: auto;
 }
 .ui-list {
+  width: 100%;
   height: 100%;
-  background-color: var(--bgc);
-  > div {
-    border-bottom: 1px solid var(--brd);
-  }
+  // background-color: var(--bgc);
   .menu-header {
     padding: 10px;
     font-size: 1.2em;
   }
+  .menu-contents {
+    padding: 10px;
+  }
   .nav-item {
+    border-radius: 4px;
     a {
       width: 100%;
       padding: 10px;
-      &:hover {
-        background-color: #6d9d72; //frog green
-        color: #fff;
+      &::first-letter {
+        text-transform: uppercase;
       }
     }
   }
@@ -141,6 +125,13 @@ section {
   .section-title {
     padding-bottom: 50px;
     border-bottom: 1px solid #efefef;
+    h1 {
+      font-size: 3em;
+      margin-bottom: 14px;
+    }
+    .section-desc {
+      color: #d6d6d6;
+    }
   }
   .section-contents {
     padding: 30px 0;
@@ -187,7 +178,7 @@ section {
 }
 #typography {
   .mainWord {
-    font-size: 6em;
+    font-size: 4em;
   }
   .subWord {
     color: #ababab
@@ -360,14 +351,34 @@ section pre {
 
 /* Small Mobile */
 @media (min-width: 360px) and (max-width: 599px) {
-  .gnb .main-menu {
-    .toggle-menu {
-      display: block;
+  header.gnb {
+    .logo {
+      text-align: center;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    .main-menu {
+      .toggle-menu {
+        display: block;
+      }
     }
   }
   .main-container {
     .left-part {
-      display: none;
+      .side-menu {
+        position: absolute; 
+        width: 100%;
+        z-index: 9999;
+        transition: margin 250ms ease;
+        margin-left: -100%;
+      }
+    }
+    &.open {
+      .left-part {
+        .side-menu {
+          margin-left: 0;
+        }
+      }
     }
   }
 
