--- a/site/views/components/colors.pug
+++ b/site/views/components/colors.pug
@@ -38,6 +38,20 @@ block contents
                         .color-box.danger 위험
                         .color-box.attention 경고
                         .color-box.importance 중요
+                    .footer
+                        - var code_state_succ = '<div class="success">성공</div>'
+                        - var code_state_info = '<div class="info">정보</div>'
+                        - var code_state_dang = '<div class="error">위험</div>'
+                        - var code_state_atte = '<div class="attention">주위</div>'
+                        - var code_state_impo = '<div class="importance">중요</div>'
+                        pre 
+                            code.language-markup 
+                                |
+                                | #{code_state_succ}
+                                | #{code_state_info}
+                                | #{code_state_dang}
+                                | #{code_state_atte}
+                                | #{code_state_impo}
             .section-contents
                 h4.contents-title Types
                 .ga-card
@@ -46,6 +60,18 @@ block contents
                         .color-box.ga-success-text 텍스트
                         .color-box.ga-success-bg 배경
                         .color-box.bordered.ga-success-border 테두리
+                    .footer 
+                        - var code_type_base = '<div class="ga-success">기본</div>'
+                        - var code_type_text = '<div class="ga-success-text">텍스트</div>'
+                        - var code_type_bg = '<div class="ga-success-bg">배경</div>'
+                        - var code_type_brd = '<div class="ga-success-border">테두리</div>'
+                        pre 
+                            code.language-markup 
+                                |
+                                | #{code_type_base}
+                                | #{code_type_text}
+                                | #{code_type_bg}
+                                | #{code_type_brd}
             .section-contents
                 h4.contents-title Grayscale
                 .ga-card
@@ -65,6 +91,17 @@ block contents
                         .color-box.small.gray-90 90
                         .color-box.small.gray-95 95
                         .color-box.small.gray-100 Black (100)
+                    .footer 
+                        - var code_type_colors = '// grays = [0, 5, 10, 15, 20, 30, 40, 50, 60, 70, 80, 85, 90, 95, 100]'
+                        - var code_type_color_0 = '<div class="gray-0">...</div>'
+                        - var code_type_color_100 = '<div class="gray-100">...</div>'
+                        pre 
+                            code.language-markup 
+                                |
+                                | #{code_type_colors}
+                                | #{code_type_color_0}
+                                | ...
+                                | #{code_type_color_100}
             .section-contents
                 h4.contents-title Palette Colors
                 .ga-card
@@ -76,3 +113,14 @@ block contents
                         - var colors = [{name: 'red', text: '빨강'},{name: 'sunset', text: '썬셋'},{name: 'orange', text: '주황'},{name: 'amber', text: '엠버'},{name: 'yellow', text: '노랑'},{name: 'citron', text: '시트론'},{name: 'lime', text: '라임'},{name: 'green', text: '초록'},{name: 'mint', text: '민트'},{name: 'teal', text: '틸'},{name: 'cyan', text: '시안'},{name: 'blue', text: '파랑'},{name: 'indigo', text: '인디고'},{name: 'purple', text: '보라'},{name: 'pink', text: '핑크'},{name: 'rose', text: '로즈'}]
                         each color in colors
                             div(class=`color-box ga-${color.name}-2 bordered`)=color.text
+                    .footer 
+                        - var code_type_colors = '// colors = [red, orange, yellow, lightgreen, green, lightblue, blue, deepblue, deeppurple, brown, gray]'
+                        - var code_type_color_red = '<div class="red">...</div>'
+                        - var code_type_color_orange = '<div class="orange">...</div>'
+                        pre 
+                            code.language-markup 
+                                |
+                                | #{code_type_colors}
+                                | #{code_type_color_red}
+                                | #{code_type_color_orange}
+                                | ...
