--- a/src/definitions/components/pagination.scss
+++ b/src/definitions/components/pagination.scss
@@ -7,12 +7,11 @@
   &.circle {
     .pagination-nav,
     .pagination-num {
-      border-radius: 17px;
+      border-radius: 1em;
     }
   }
   .pagination {
     &-item {
-      font-size: 1rem;
       border:1px solid;
       background-color: #fff;
       border-color: #d5d5d5;
@@ -23,17 +22,20 @@
     &-nav, &-num {
       display: inline-block;
       min-width: 2em;
-      line-height: 1em;
+      line-height: 2em;
       text-align: center;
       font-weight: 500;
       border-radius: $baseBorderRadius;
       vertical-align: baseline;
       margin: 0 4px;
-      padding: 0.5em;
+      padding:  0 0.5em;
       user-select: none;
       color:#909090;
       transition-duration: .1s;
       transition: all 250ms ease;
+      i {
+        font-size: 1em;
+      }
       &:hover {
         background-color: #ccc;
         border-color: #F8F8F8;
@@ -99,13 +101,10 @@
   }
   &.compact {
     .pagination {
-      &-page-wrapper {
-        //padding: 6px 8px;
-        //border: 1px solid #d6d6d6;
-      }
       &-num, &-nav {
         min-width: 1.75em;
-        padding: 0.375em;
+        line-height: 1.75em;
+        padding: 0 0.375em;
         margin: 0 3px;
       }
     }
