--- a/src/definitions/components/panel.scss
+++ b/src/definitions/components/panel.scss
@@ -5,7 +5,6 @@
   .panel-header {
     background-color: $panelBackgroundColor;
     display: flex;
-    //justify-content: space-between;
     justify-content: flex-start;
     align-items: center;
     padding: $panelVerticalPadding relativePx(12);;
@@ -27,7 +26,7 @@
       padding: $panelPadding;
       .content {
         &-head {
-          background-color: #e5e9f2;
+          background-color: var(--suf);
           padding: 10px;
           margin-bottom: $panelVerticalPadding;
         }
