--- a/site/views/components/badge.pug
+++ b/site/views/components/badge.pug
@@ -8,7 +8,8 @@ block contents
         section#badge
             .section-title
                 h1 Badge
-                .section-desc - Badge System
+                .section-desc 
+                    p Small visual indicators showing counts or statuses.
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
