--- a/site/views/components/base.pug
+++ b/site/views/components/base.pug
@@ -7,15 +7,17 @@ block contents
     .page-wrapper
         section#typography
             .section-title
-                h1 Typography
+                h1 Foundation 
+                .section-desc 
+                    p Core design foundations like font sizes, spacing, and border radius.
             .section-contents
+                h4 Typography
                 .ga-card
                     .contents
-                        h4.contents-title
-                            .ga-tag.label.secondary
-                                i.icon.left.xi-at
-                                | fontfamily
-                            | Pretendard Variable(CDN)
+                        .ga-tag.label.secondary
+                            i.icon.left.xi-at
+                            | fontfamily
+                        | Pretendard Variable(CDN)
                         .contents-wrapper.pretendard
                             .ga-grid
                                 .column.span-3.span-xs-12.mainWord AaBb
@@ -26,9 +28,9 @@ block contents
                                     p 1234567890 ,./(){}[]\|:;"'?
                                     p 가나다라마바사 프리텐다드
             .section-contents
+                h4 Weight
                 .ga-card
                     .contents
-                        h4.contents-title Weight
                         .contents-wrapper
                             table.ga-table
                                 thead
@@ -51,9 +53,9 @@ block contents
                                         td Frontend Renders On Grid. 
 
             .section-contents
+                h4 Letter Spacing
                 .ga-card
                     .contetns
-                        h4.contents-title Spacing
                         .contents-wrapper
                             table.ga-table
                                 thead
@@ -89,9 +91,9 @@ block contents
                                         td spacing-narrower 
                                         td Frontend Renders On Grid. 
             .section-contents
+                h4.header Heading
                 .ga-card
                     .contents
-                        h4.header.contents-title Heading
                         .contents-wrapper
                             h1.header [H1] Frontend Renders On Grid. (28px)
                             h2.header [H2] Frontend Renders On Grid. (24px)
@@ -99,9 +101,9 @@ block contents
                             h4.header [H4] Frontend Renders On Grid. (16px)
                             h5.header [H5] Frontend Renders On Grid. (14px)
             .section-contents
+                h4 Size
                 .ga-card
                     .contents
-                        h4.contents-title Size
                         .contents-wrapper
                             .ga-button.tiny Tiny
                             .ga-button.small Small
