--- a/site/views/components/button.pug
+++ b/site/views/components/button.pug
@@ -9,7 +9,8 @@ block contents
         section#button.d-mode-border-color
             .section-title
                 h1 Buttons
-                .section-desc Buttons Description.
+                .section-desc 
+                    p Interactive buttons with variants for size, color, and state.
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
