--- a/site/views/components/calendar.pug
+++ b/site/views/components/calendar.pug
@@ -8,6 +8,8 @@ block contents
     section#calendar
       .section-title
         h1 Calendar
+        .section-desc 
+          p Date picker and scheduling UI component.
       .section-contents
         h4 달력
         .ga-card.attached
