--- a/site/views/components/colors.pug
+++ b/site/views/components/colors.pug
@@ -8,6 +8,8 @@ block contents
         section#typography
             .section-title
                 h1 Colors
+                .section-desc
+                    p Defined color tokens for branding, backgrounds, and UI states. 
             .section-contents
                 h4.contents-title Brands
                 .ga-card.attached
