--- a/site/views/components/grid.pug
+++ b/site/views/components/grid.pug
@@ -8,7 +8,8 @@ block contents
         section#grid
             .section-title
                 h1 Grid
-                .section-desc - Grid System.
+                .section-desc 
+                    p Layout utility using CSS Grid for structured alignment.(Flex)
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
