--- a/site/views/components/input.pug
+++ b/site/views/components/input.pug
@@ -8,7 +8,8 @@ block contents
         section#input
             .section-title
                 h1 Inputs
-                .section-desc - Input System.
+                .section-desc
+                    p Text input fields with consistent styling and focus handling.
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
