--- a/site/views/components/list.pug
+++ b/site/views/components/list.pug
@@ -8,6 +8,8 @@ block contents
         section#list
             .section-title
                 h1 List
+                .section-desc 
+                    p Structured list styling for displaying repeated content.  
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
