--- a/site/views/components/message.pug
+++ b/site/views/components/message.pug
@@ -8,6 +8,8 @@ block contents
         section#alert
             .section-title
                 h1 Message
+                .section-desc 
+                    p Informational, warning, or error messages for user feedback.
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
