--- a/site/views/components/modal.pug
+++ b/site/views/components/modal.pug
@@ -8,6 +8,8 @@ block contents
         section#modal
             .section-title
                 h1 Modal
+                .section-desc 
+                    p Overlay dialog UI for alerts or focused interactions.
             .section-contents
                 h4.contents-title 기본
                 .contents-wrapper
