--- a/site/views/components/pagination.pug
+++ b/site/views/components/pagination.pug
@@ -8,6 +8,8 @@ block contents
         section#pagination
             .section-title
                 h1 Pagination
+                .section-desc 
+                    p UI for navigating through multiple pages of content. 
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
