--- a/site/views/components/panel.pug
+++ b/site/views/components/panel.pug
@@ -9,6 +9,7 @@ block contents
             .section-title
                 h1 Panel
                 .section-desc
+                    p Expandable/collapsible side or content panels.
             .section-contents
                 h4.contents-title 기본
                 .contents-wrapper
