--- a/site/views/components/selectbox.pug
+++ b/site/views/components/selectbox.pug
@@ -7,7 +7,9 @@ block contents
     .page-wrapper
         section#selectbox
             .section-title
-                h1 Select Box
+                h1 Selectbox
+                .section-desc 
+                    p Dropdown UI for selecting a single item from options.
             .section-contents
                 h4.contents-title 기본 - Dropdown
                 .ga-card.attached
