--- a/site/views/components/switch.pug
+++ b/site/views/components/switch.pug
@@ -8,6 +8,8 @@ block contents
         section#switch
             .section-title
                 h1 Switch
+                .section-desc 
+                    p Toggle-style input for on/off states with smooth transitions.
             .section-contents
                 h4.contents-title 기본 타입 1
                 .ga-card.attached
