--- a/site/views/components/table.pug
+++ b/site/views/components/table.pug
@@ -9,6 +9,7 @@ block contents
             .section-title
                 h1 Table
                 .section-desc
+                    p Data tables with support for rows, headers, and styling.
             - var rows = [{name: '김아무개', age: 11, job: '학생'},{name: '이아무개', age: 17, job: '대학생'},{name: '박아무개', age: 31, job: '대학원생'},]
             .section-contents
                 h4.contents-title 기본
