--- a/site/views/components/tabs.pug
+++ b/site/views/components/tabs.pug
@@ -8,6 +8,8 @@ block contents
         section#tabs
             .section-title
                 h1 Tabs
+                .section-desc 
+                    p UI for toggling between content sections in a tabbed layout. 
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
