--- a/site/views/components/toast.pug
+++ b/site/views/components/toast.pug
@@ -8,6 +8,8 @@ block contents
         section#toast
             .section-title
                 h1 Toast
+                .section-desc 
+                    p Temporary, auto-dismissable message for quick user feedback.
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
