--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -25,7 +25,8 @@ html
                         .ga-button.icon.circle.show-menu
                             i.xi-bars
                 .logo 
-                    span FROG 
+                    a(href="/")
+                        span FROG 
                     //- div.sub-logo Fix, Refactor, Optimize, Grow!!
                     //- div.sub-logo Frontend Renders On Grid...
                     div.sub-logo For Real, Only Good!!
@@ -37,7 +38,7 @@ html
                         a.ga-button.icon.circle.toggle-mode(href="https://github.com/noistommy/frog-ui-css")
                             i.xi-github
             .main-container.main
-                .left-part 
+                .left-part
                     .side-menu
                         include lnb
                 .right-part
