--- a/site/views/lnb.pug
+++ b/site/views/lnb.pug
@@ -1,4 +1,4 @@
-- var path = ''
+- var path = '/'
 - var selected = title?.toLowerCase()
 - var menuItems = ['base', 'colors', 'button', 'input', 'tag', 'checkbox', 'switch', 'badge', 'form', 'list', 'selectbox', 'message', 'tabs', 'cards', 'table', 'pagination', 'panel', 'grid', 'grid2', 'calendar', 'modal', 'toast']
 
@@ -9,4 +9,4 @@
         .ga-list.selection
             each item in menuItems
                 li.nav-item.item(class=`${selected === item ? 'selected' : '11'}`)
-                    a(href=`${path}/pages/${item}`)= item
+                    a(href=`${path}pages/${item}`)= item
