--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -129,7 +129,7 @@ section {
   margin-bottom: 20px;
 }
 section .section-title {
-  padding-bottom: 50px;
+  padding-bottom: 20px;
   border-bottom: 1px solid #efefef;
 }
 section .section-title h1 {
@@ -138,6 +138,7 @@ section .section-title h1 {
 }
 section .section-title .section-desc {
   color: #d6d6d6;
+  font-size: 1.2em;
 }
 section .section-contents {
   padding: 30px 0;
@@ -186,7 +187,7 @@ section .section-contents .contents-wrapper .contents-item {
 #typography .subWord {
   color: #ababab;
 }
-#typography p {
+#typography .contents-wrapper p {
   letter-spacing: 5px;
   font-weight: 500;
 }
