--- a/site/views/components/cards.pug
+++ b/site/views/components/cards.pug
@@ -8,6 +8,8 @@ block contents
         section#tabs
             .section-title
                 h1 Cards
+                .section-desc 
+                    p Content containers for grouping text, images, and actions.
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
