--- a/site/views/components/checkbox.pug
+++ b/site/views/components/checkbox.pug
@@ -8,6 +8,8 @@ block contents
         section#checkbox
             .section-title
                 h1 Check Box
+                .section-desc 
+                    p Multi-select input with accessible and clear visual states.
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
