--- a/site/views/components/form.pug
+++ b/site/views/components/form.pug
@@ -8,7 +8,8 @@ block contents
         section#form
             .section-title
                 h1 Form
-                .section-desc - Form System.
+                .section-desc 
+                    p Grouped input structure with labels, validation, and layout.
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
