--- a/site/views/components/tag.pug
+++ b/site/views/components/tag.pug
@@ -8,7 +8,8 @@ block contents
         section#tag
             .section-title
                 h1 Tag
-                .section-desc - Tag System
+                .section-desc 
+                    p Compact label elements used for status indicators or filters. 
             .section-contents
                 h4.contents-title 기본
                 .ga-card.attached
